--- a/design/main.css
+++ b/design/main.css
@@ -115,6 +115,7 @@ a {
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
+    transition: color 1s;
 }
   
 .button span {
@@ -135,6 +136,7 @@ a {
 
 .button:hover span {
     padding-right: 25px;
+    color: #acbeff;
 }
   
 .button:hover span:after {
