--- a/design/main.css
+++ b/design/main.css
@@ -115,7 +115,7 @@ a {
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
-    transition: color 1s;
+    transition: background-color 1s;
 }
   
 .button span {
@@ -136,7 +136,7 @@ a {
 
 .button:hover span {
     padding-right: 25px;
-    color: #acbeff;
+    background-color: #acbeff;
 }
   
 .button:hover span:after {
