--- a/design/main.css
+++ b/design/main.css
@@ -102,7 +102,6 @@ a {
     color: white;
     font-family: 'B612 Mono', monospace;
 }
-
 .button {
     border-radius: 4px;
     background-color: #7289DA;
@@ -115,7 +114,7 @@ a {
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
-    transition: background-color 1s;
+    transition: background-color 0.5s;
 }
   
 .button span {
@@ -123,25 +122,30 @@ a {
     display: inline-block;
     position: relative;
     transition: 0.5s;
+
 }
   
 .button span:after {
     content: '\00bb';
     position: absolute;
     opacity: 0;
+
     top: 0;
     right: -20px;
     transition: 0.5s;
 }
-
+.button:hover {
+    background-color: #a0add9;
+}
 .button:hover span {
     padding-right: 25px;
-    background-color: #acbeff;
+    
 }
   
 .button:hover span:after {
     opacity: 1;
     right: 0;
+
 }
 
 .commands p {
